feat: added kubeconfig export after cluster setup

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,7 @@ plan.out
 test/
 tests/
 .test/
+
+# Ignore temporary SSH key and known_hosts files created by kubeconfig export
+.tmp_ssh_key_*
+.known_hosts_*
