--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -16,15 +16,17 @@ sections:
 content: |-
   # Terraform Hetzner Cloud RKE2 Infrastructure Module
 
-  This Terraform module provisions the infrastructure foundation for an RKE2 Kubernetes cluster on Hetzner Cloud with AWS RDS as the external datastore. The module creates the underlying infrastructure components needed for a highly available RKE2 cluster, with Kubernetes applications deployed separately.
+  This Terraform module provisions the infrastructure foundation for an RKE2 Kubernetes cluster on Hetzner Cloud. The module creates the underlying infrastructure components needed for a highly available RKE2 cluster using embedded etcd by default, with Kubernetes applications deployed separately.
 
   ## Features
 
-  - **High Availability**: Multiple control plane nodes with external datastore (AWS RDS PostgreSQL)
+  - **High Availability**: Multiple control plane nodes with embedded etcd (or optional external datastore)
   - **Hetzner Cloud Integration**: Native support for Hetzner Cloud services (Load Balancer, Networking, etc.)
   - **Security**: Firewall rules, private networking, and secure access controls
-  - **Infrastructure Focus**: Provisions servers, networking, and datastore - applications deployed separately
+  - **Infrastructure Focus**: Provisions servers, networking - applications deployed separately
   - **Cloud-Init**: Automated node provisioning and RKE2 installation
+  - **Kubeconfig Export**: Automatic kubeconfig retrieval after cluster provisioning
+  - **Optional External Datastore**: Support for external PostgreSQL-compatible datastore if needed
 
   ## Architecture
 
@@ -33,67 +35,67 @@ content: |-
   - Control plane nodes (configurable count) with RKE2 server
   - Worker nodes (configurable count) with RKE2 agent
   - Load balancer for Kubernetes API server
-  - AWS RDS PostgreSQL instance as external datastore
+  - Embedded etcd by default (optional external datastore support)
   - Firewall rules for secure access
   - **Note**: Kubernetes applications (cert-manager, external-dns, Rancher) are deployed separately
 
   ## Usage
 
   ```hcl
-  module "rke2_infrastructure" {
-    source = "your-org/rke2/hcloud"
-    version = "~> 1.0"
+  module "rke2_cluster" {
+    source = "github.com/FranMako/terraform-hetzner-rke2"
 
-    # Hetzner Cloud Configuration
     hcloud_token = var.hcloud_token
-    cluster_name = "my-cluster"
-    
-    # Server Configuration
-    server_type     = "cx32"
-    server_location = "nbg1"
-    
-    # Network Configuration
-    network_cidr = "10.0.0.0/16"
-    subnet_cidr  = "10.0.1.0/24"
-    
-    # RKE2 Configuration
-    rke2_token = var.rke2_token
-    
-    # AWS RDS Configuration
-    aws_region                   = "eu-central-1"
-    external_datastore_url = var.datastore_url
-    db_username           = "postgres"
-    allowed_cidr          = ["10.0.0.0/16"]
-    allocated_storage_gb  = 20
-    engine_version        = "17.6"
+    rke2_token   = var.rke2_token
+
+    cluster_name = "my-rke2-cluster"
+
+    # Control plane configuration
+    cluster_server_names_cp   = ["cp-1", "cp-2", "cp-3"]
+    private_ips_cp            = ["10.0.1.1", "10.0.1.2", "10.0.1.3"]
+    nb_cp_additional_servers  = 2
+
+    # Worker configuration
+    cluster_server_names_worker = ["worker-1", "worker-2"]
+    private_ips_workers         = ["10.0.1.11", "10.0.1.12"]
+    nb_worker_servers           = 2
+    worker_location             = "nbg1"
+
+    # SSH access (disabled by default)
+    ssh_allowed_ips = ["0.0.0.0/0"]
+
+    # Optional: External datastore (uses embedded etcd if not provided)
+    # datastore_endpoint = "postgres://user:password@host:5432/dbname"
   }
+  ```
+
+  ## Kubeconfig Export
+
+  After successful deployment, the module automatically retrieves the admin kubeconfig from the first control plane node:
+
+  - The kubeconfig is saved to the path specified by `kubeconfig_path` (default: `./kubeconfig.yaml`)
+  - The `kubeconfig` output contains the kubeconfig content (sensitive value)
+  - The `kubeconfig_command` output shows the manual command to retrieve kubeconfig if needed
+
+  ```bash
+  # Use the exported kubeconfig
+  export KUBECONFIG=./kubeconfig.yaml
+  kubectl get nodes
   ```
 
   ## Examples
 
   - [Basic Usage](./examples/basic/) - Simple RKE2 infrastructure setup
-  
-  ## Requirements
 
   {{ .Requirements }}
 
-  ## Providers
-
   {{ .Providers }}
-
-  ## Modules
 
   {{ .Modules }}
 
-  ## Resources
-
   {{ .Resources }}
 
-  ## Inputs
-
   {{ .Inputs }}
-
-  ## Outputs
 
   {{ .Outputs }}
 
