--- a/examples/basic/terraform.tfvars.example
+++ b/examples/basic/terraform.tfvars.example
@@ -16,10 +16,23 @@ network_cidr = "10.0.0.0/16"
 subnet_cidr  = "10.0.1.0/24"
 network_zone = "eu-central"
 
+# SSH Configuration
+# Path to your SSH public key (required)
+# IMPORTANT: Use absolute paths - tilde (~) is NOT supported by Terraform's file() function
+# Example: ssh_public_key_path = "/home/youruser/.ssh/id_ed25519.pub"
+ssh_public_key_path = "/home/youruser/.ssh/id_ed25519.pub"
+
+# Path to your SSH private key (required if enable_ssh_access = true for kubeconfig retrieval)
+# IMPORTANT: Use absolute paths - tilde (~) is NOT supported by Terraform's file() function
+# ssh_private_key_path = "/home/youruser/.ssh/id_ed25519"
+
 # SSH Access (Replace with your actual IP for security)
 ssh_allowed_ips = [
   "YOUR.IP.ADDRESS.HERE/32"
 ]
+
+# Enable SSH access for kubeconfig retrieval (set to true and provide private key path to enable)
+enable_ssh_access = false
 
 # Cluster Configuration
 nb_cp_additional_servers = 1  # Total control plane nodes will be 2 (1 + 1 additional)
