--- a/.github/workflows/terraform-registry.yml
+++ b/.github/workflows/terraform-registry.yml
@@ -1,9 +1,9 @@
-name: Terraform Registry Release
+name: OpenTofu Registry Release
 
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - '[0-9]+.[0-9]+.[0-9]+'
   workflow_dispatch:
     inputs:
       dry_run:
@@ -14,7 +14,7 @@ on:
 
 jobs:
   validate:
-    name: Validate Terraform Module
+    name: Validate OpenTofu Module
     runs-on: ubuntu-latest
     
     steps:
@@ -23,19 +23,19 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+      - name: Setup OpenTofu
+        uses: opentofu/setup-opentofu@v1
         with:
-          terraform_version: ~1.2
+          tofu_version: ~1.8
 
-      - name: Terraform Format Check
-        run: terraform fmt -check -recursive
+      - name: OpenTofu Format Check
+        run: tofu fmt -check -recursive
         
-      - name: Terraform Init
-        run: terraform init -backend=false
+      - name: OpenTofu Init
+        run: tofu init -backend=false
 
-      - name: Terraform Validate
-        run: terraform validate
+      - name: OpenTofu Validate
+        run: tofu validate
 
       - name: Setup tfsec
         uses: aquasecurity/tfsec-action@v1.0.3
@@ -81,8 +81,8 @@ jobs:
             if [ -d "$example" ]; then
               echo "Validating example: $example"
               cd "$example"
-              terraform init -backend=false
-              terraform validate
+              tofu init -backend=false
+              tofu validate
               cd - > /dev/null
             fi
           done
@@ -114,7 +114,7 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     needs: [validate, security-scan]
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.event.inputs.dry_run != 'true'
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && github.event.inputs.dry_run != 'true'
     
     steps:
       - name: Checkout code
@@ -142,7 +142,7 @@ jobs:
           
           echo "" >> CHANGELOG.md
           echo "### Module Information" >> CHANGELOG.md
-          echo "- **Terraform Version**: >= 1.2.0" >> CHANGELOG.md
+          echo "- **OpenTofu Version**: >= 1.8.0" >> CHANGELOG.md
           echo "- **Providers**: AWS, Hetzner Cloud, Kubernetes, Helm" >> CHANGELOG.md
           echo "- **Purpose**: RKE2 Kubernetes cluster on Hetzner Cloud with AWS RDS datastore" >> CHANGELOG.md
 
@@ -168,8 +168,8 @@ jobs:
         run: |
           if [ "${{ needs.release.result }}" == "success" ]; then
             echo "✅ Module validation passed and release created successfully!"
-            echo "🚀 The Terraform Registry will automatically detect and publish this release."
-            echo "📦 Module will be available at: https://registry.terraform.io/modules/${{ github.repository }}"
+            echo "🚀 The OpenTofu Registry will automatically detect and publish this release."
+            echo "📦 Module will be available at: https://registry.opentofu.org/modules/${{ github.repository }}"
           else
             echo "✅ Module validation passed!"
             echo "ℹ️  No release was created (dry run or validation only)."
