--- a/cloud-init/worker.yml
+++ b/cloud-init/worker.yml
@@ -9,7 +9,7 @@ packages:
 
 runcmd:
   - mkdir -p /etc/rancher/rke2/
-  - curl -sfL https://get.rke2.io | INSTALL_RKE2_TYPE="agent" sh -
+  - curl -sfL https://get.rke2.io | INSTALL_RKE2_TYPE="agent" INSTALL_RKE2_CHANNEL="${install_rke2_channel}" sh -
   # Wait for metadata service to be available and fetch instance ID
   - |
     while ! curl -s http://169.254.169.254/hetzner/v1/metadata/instance-id > /dev/null; do
